[package]
name = "dsl"
version = "0.1.0"
authors = ["chocobo333 <chocobo1355@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
parser_combinator = {path = "../parser_combinator"}

syn = {version = "1.0.54", features = ["full", "extra-traits"]}
proc-macro2 = "1.0.24"
quote = "1.0"